fixed issu with overlap

--- a/src/app/components/Layout.css
+++ b/src/app/components/Layout.css
@@ -13,6 +13,12 @@
     margin-bottom: 0;
 }
 
+.app:first-child {
+    margin-top: 0;
+    margin-bottom: 0;
+    z-index: 10;
+}
+
 .settingsBtn {
     cursor: pointer;
     font-size: 36px;
